# brisk-reconciler

./: .gitignore  LICENSE  Makefile  Readme.md  azure-pipelines.yml  brisk-reconciler-ocaml.opam  brisk-reconciler.opam  dune  dune-project  esy.json  package-ci-4.04.json  package-ci-4.06.json  package-ci-4.07.json  package-ci-4.08.json  package-ci.json  package.json
.ci/: build-test-platform.yml  build-test.yml  build.yml  esy-build-steps.yml  publish-build-cache.yml  restore-build-cache.yml  test.yml
.github/workflows/: bench.yml  build.yml  npm-publish.yml  print_esy_cache.js  release-drafter.yml  validate-pr.yml
bench/: benchmark.ml  brisk.ml  dune
benchmark/: .gitattributes  Benchmark.re  Brisk.re  Brisk_jsx_runtime.re  dune  esy.json  flambda.json  package.json
benchmark/esy.lock/: index.json
benchmark/esy.lock/opam/ppxlib.0.8.1/: opam
benchmark/flambda.esy.lock/: index.json
docs/: hooks-idioms.md
esy.lock/: index.json
example/lambda-term/: dune  lambda_term.mlx
example/web-reconciler/: dune  dune-project  index.html  web_reconciler.mlx
examples/: dune
examples/dom/: Event.re  WebReconciler.re  dune  dune-project  esy.json  index.html
examples/dom/esy.lock/: index.json
examples/lambda-term/: Lambda_term.re  dune  dune-project  esy.json
examples/lambda-term/esy.lock/: index.json
jsx/: brisk_jsx.ml  brisk_ppx.ml  dune
jsx/config/: discover.ml
lib/: Brisk_reconciler.re  Brisk_reconciler.rei  Brisk_reconciler_internal.re  Brisk_reconciler_next.re  CoreTypes.re  EffectSequence.re  EffectSequence.rei  Element.re  Element.rei  GlobalState.re  GlobalState.rei  HeterogenousList.re  HeterogenousList.rei  Hooks.re  Hooks.rei  Instance.re  Instance.rei  InstanceForest.re  InstanceForest.rei  ListTR.re  Reconciler.re  Reconciler.rei  RemoteAction.re  RenderedElement.re  RenderedElement.rei  SubtreeChange.re  SubtreeChange.rei  Update.re  Update.rei
package-ci-4.04.esy.lock/: index.json
package-ci-4.06.esy.lock/: index.json
package-ci-4.07.esy.lock/: index.json
package-ci-4.08.esy.lock/: index.json
package-ci.esy.lock/: index.json
src/: brisk_reconciler.ml  brisk_reconciler.mli  brisk_reconciler_internal.ml  dune  effect_sequence.ml  effect_sequence.mli  heterogenous_list.ml  heterogenous_list.mli  hooks.ml  hooks.mli  list_tailrec.ml  remote_action.ml  remote_action.mli
test/: Assert.re  Brisk_jsx_runtime.ml  Components.re  RunTests.re  Test.re  Test.re.old  TestFramework.re  TestHelpers.re  TestPrinter.re  TestReconciler.re  dune
tests/: components.mlx  dune  helpers.ml  reconciler.ml  test_brisk_reconciler.mlx
