(executable
  ;; The bench depends on core_bench/core_unix (with-dev-setup). It is
  ;; opt-in via BRISK_BUILD_BENCH=1 so a default `dune build` does not
  ;; require those deps. core_unix is unix-only and requires OCaml >= 5.1.
  (enabled_if (and
    (= %{env:BRISK_BUILD_BENCH=0} 1)
    (>= %{ocaml_version} 5.1)
    (<> %{os_type} "Win32")))
  (name benchmark)
  (public_name benchmark)
  (libraries core core_bench core_unix brisk-reconciler)
  (preprocess (pps brisk-reconciler.ppx))
  (flags (:standard -w -3)))
