(library
   (name BriskReconcilerTest)
   (public_name brisk-reconciler.test)
   (ocamlopt_flags -linkall -g)
   (libraries rely.lib brisk-reconciler)
   (preprocess (pps brisk_jsx ppx_deriving.std))
   (modules (:standard \ RunTests))
)

(executable
 (name RunTests)
 (libraries brisk-reconciler.test)
 (modules RunTests))

(alias
 (name runtest)
 (deps RunTests.exe)
 (action (run %{deps})))
