(executable
  (name WebReconciler)
  (libraries brisk-reconciler)
  (preprocess (pps js_of_ocaml-ppx brisk-reconciler.ppx))
  (modes js))

(rule
  (targets WebReconciler.js)
  (deps WebReconciler.bc.js)
  (action
    (run cp %{deps} %{targets})))

(alias
  (name app)
  (deps WebReconciler.js index.html))
